--- a/app/views/agreements/show.html.erb
+++ b/app/views/agreements/show.html.erb
@@ -19,7 +19,7 @@
   <% if signed_in? %>
     <% if @agreement.signed_by?(current_user) %>
       <a id="already-agreed">
-        <i class="icon-ok"></i> You have signed this CLA.
+        <i class="icon-ok"></i> You have signed this CLA
       </a>
     <% else %>
       <h3>Agreement form:</h3>
