Slider changes; logging calls

--- a/app/views/pages/_how_it_works.html.erb
+++ b/app/views/pages/_how_it_works.html.erb
@@ -1,12 +1,10 @@
 <div id="how-it-works" class="carousel slide">
   <%
     steps = [
-      'Sign in with GitHub and create an agreement for your project.',
-      'Add a link to your CONTRIBUTING file.',
-      'A new pull request is marked as needing a CLA signature.',
-      'The contributor signs in with GitHub and signs your agreement.',
-      'The contributor signs in with GitHub and signs your agreement.',
-      'Done!  The pull request is automatically marked ready for merge.'
+      'When new pull request is marked as needing a CLA signature..',
+      'The contributor signs in with GitHub..',
+      'and signs your agreement.',
+      'Done! The pull request is automatically marked ready for merge.'
     ]
   %>
   <h2>How does it work?  Just a few easy steps:</h2>
