Allow agreement owner to delete agreement #60

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -89,6 +89,18 @@ body.signatures-create {
     }
   }
 
+  div#delete-agreement {
+    margin-top: 27px;
+
+    h2 {
+      @extend .row;
+    }
+
+    form {
+      margin: 0;
+    }
+  }
+
   div#contributing-guidelines {
     @extend .row;
     margin-bottom: 20px;
