--- a/app/views/agreements/show.html.erb
+++ b/app/views/agreements/show.html.erb
@@ -43,4 +43,5 @@
 <% if @agreement.owned_by?(current_user) %>
   <%= render partial: 'agreements/contributing_file_link' %>
   <%= render partial: 'agreements/signing_users' %>
+  <%= render partial: 'agreements/delete' %>
 <% end %>
