Direct user through /auth/github for public_repo scope prior to creating agreement

--- a/app/views/agreements/index.html.erb
+++ b/app/views/agreements/index.html.erb
@@ -34,5 +34,5 @@
 </div>
 
 <div class="row form-actions">
-  <p><%= link_to "Create a new agreement", new_agreement_path, class: 'btn btn-primary' %></p>
+  <p><%= link_to "Create a new agreement", "/auth/github", class: 'btn btn-primary' %></p>
 </div>
