--- a/app/views/pages/why_cla.html.erb
+++ b/app/views/pages/why_cla.html.erb
@@ -44,7 +44,7 @@
   <li><a href="http://source.android.com/source/cla-individual.html">Android</a></li>
   <li><a href="http://mono-project.com/FAQ:_Licensing">Mono</a></li>
   <li><a href="http://www.apache.org/licenses/icla.txt">Apache</a></li>
-  <li><a href="http://nodejs.org/cla.html">NodeJS</a></li>
+  <li><a href="http://nodejs.org/cla.html">NodeJS</a> ([doesn't use CLA anymore](http://blog.nodejs.org/2014/06/11/notes-from-the-road/))</li>
 </ul>
 
 <h2>Conclusion</h2>
