logo changed and navbar redirection

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="hero-unit">
-  <%= image_tag 'logo.png', class: 'logo' %>
+  <%= image_tag 'thg-logo.png', class: 'logo' %>
   <h1>The Hybrid Group</h1>
   <h2>Contributor License Agreements</h2>
   <p><a class="btn btn-primary btn-large" href="/auth/github">Sign in with GitHub to get started &raquo;</a></p>
