--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
-    <a class="brand" href="http://hybridgroup.com">The Hybrid Group</a>
+    <a class="brand" href="/">The Hybrid Group</a>
     <ul class="nav">
       <%# nav_link_to 'Home', home_path %>
       <%= nav_link_to 'Why CLAs?', page_path('why_cla') %>
