--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,44 @@
 @import "chosen";
 @import "bootstrap";
 
+@font-face {
+    font-family: 'Open Sans';
+    src: font-url('OpenSans-Regular-webfont.eot');
+    src: font-url('OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         font-url('OpenSans-Regular-webfont.woff') format('woff'),
+         font-url('OpenSans-Regular-webfont.ttf') format('truetype'),
+         font-url('OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: font-url('OpenSans-Bold-webfont.eot');
+    src: font-url('OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
+         font-url('OpenSans-Bold-webfont.woff') format('woff'),
+         font-url('OpenSans-Bold-webfont.ttf') format('truetype'),
+         font-url('OpenSans-Bold-webfont.svg#open_sansregular') format('svg');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: font-url('OpenSans-Light-webfont.eot');
+    src: font-url('OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
+         font-url('OpenSans-Light-webfont.woff') format('woff'),
+         font-url('OpenSans-Light-webfont.ttf') format('truetype'),
+         font-url('OpenSans-Light-webfont.svg#open_sansregular') format('svg');
+    font-weight: 200;
+    font-style: normal;
+}
+
 body {
   padding-top: 80px;
   padding-bottom: 40px;
-  font-size:100%;
+  font-size:16px;
+  font-family: 'Open Sans', sans-serif;
 }
 
 a {
@@ -162,7 +196,7 @@ div.navbar.navbar-fixed-top {
     background-repeat: no-repeat;
     background-position: center center;
     text-indent:100%;
-    white-space: nowrap;  
+    white-space: nowrap;
     overflow: hidden;
   }
 }
