--- a/app/views/agreements/show.html.erb
+++ b/app/views/agreements/show.html.erb
@@ -44,4 +44,5 @@
   <%= render partial: 'agreements/contributing_file_link' %>
   <%= render partial: 'agreements/signing_users' %>
   <%= render partial: 'agreements/delete' %>
+  <%= render partial: 'agreements/transfer_owner' %>
 <% end %>
