Upgraded http links to https where supported

--- a/app/views/agreements/new.html.erb
+++ b/app/views/agreements/new.html.erb
@@ -29,7 +29,7 @@
   <div id="agreement-editor-content" class="tab-content">
     <div class="tab-pane active" id="edit-agreement">
       <%= form.text_area :text, placeholder: 'I, the contributor, agree to...', class: "span12", rows: 10 %>
-      <span class="help-block">(You can use <a href="http://kramdown.gettalong.org/quickref.html">Markdown formatting</a>.)</span>
+      <span class="help-block">(You can use <a href="https://kramdown.gettalong.org/quickref.html">Markdown formatting</a>.)</span>
     </div>
     <div class="tab-pane" id="preview-agreement">
       <div class="preview-spinner progress progress-striped active">
