--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <%= image_tag 'logo.png', class: 'logo' %>
   <h1>CLAHub</h1>
   <h2>Contributor License Agreements on GitHub</h2>
-  <p>Easily add a <a href="http://en.wikipedia.org/wiki/Contributor_License_Agreement">Contributor License Agreement</a> to your GitHub project, let contributors sign it, and see at a glance which pull request authors have signed your CLA, and which haven&rsquo;t.</p>
+  <p>Easily add a <a href="https://en.wikipedia.org/wiki/Contributor_License_Agreement">Contributor License Agreement</a> to your GitHub project, let contributors sign it, and see at a glance which pull request authors have signed your CLA, and which haven&rsquo;t.</p>
   <p><a class="btn btn-primary btn-large" href="/auth/github">Sign in with GitHub to get started &raquo;</a></p>
   <p>Or, read more about <%= link_to 'what CLAs are and why you might use one', page_path('why_cla') %>&hellip;</p>
 </div>
