--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -14,9 +14,9 @@
 
 <h3 id="reuse">Reuse</h3>
 
-<p>This document is an adaptation of the <a href="http://blog.railsrumble.com/terms/">Rails Rumble Terms of Service</a> which is a derivative <a href="http://legal.heroku.com/tos">Heroku Terms of Service</a> which itself is derivative of the <a href="http://code.google.com/appengine/terms.html">Google App Engine Terms of Service</a>. The original work has been modified with permission under the <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 License</a>. Neither Rails Rumble, Inc., nor Heroku, Inc. nor Google, Inc. is connected with, sponsors, or endorses CLAHub or its use of the work.</p>
+<p>This document is an adaptation of the <a href="http://blog.railsrumble.com/terms/">Rails Rumble Terms of Service</a> which is a derivative <a href="https://legal.heroku.com/tos">Heroku Terms of Service</a> which itself is derivative of the <a href="https://code.google.com/appengine/terms.html">Google App Engine Terms of Service</a>. The original work has been modified with permission under the <a href="https://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 License</a>. Neither Rails Rumble, Inc., nor Heroku, Inc. nor Google, Inc. is connected with, sponsors, or endorses CLAHub or its use of the work.</p>
 
-<p>You’re welcome to adapt and use this document for your own needs. If you make an improvement, we’d appreciate it if you would <a href="http://github.com/clahub/clahub/issues">let us know</a> so we can consider improving our own document.</p>
+<p>You’re welcome to adapt and use this document for your own needs. If you make an improvement, we’d appreciate it if you would <a href="https://github.com/clahub/clahub/issues">let us know</a> so we can consider improving our own document.</p>
 
 <h3 id="your_agreement_with_us">Your Agreement with CLAHub</h3>
 
