--- a/app/views/pages/why_cla.html.erb
+++ b/app/views/pages/why_cla.html.erb
@@ -39,11 +39,11 @@
 <p>So what notable Open Source projects are using a CLA? Here are just a few.</p>
 
 <ul>
-  <li><a href="http://www.canonical.com/contributors">Canonical</a></li>
+  <li><a href="https://www.canonical.com/contributors">Canonical</a></li>
   <li><a href="https://fedoraproject.org/wiki/Legal:Fedora_Project_Contributor_Agreement">Fedora</a></li>
   <li><a href="https://cla.developers.google.com/about/google-individual">Android</a></li>
   <li><a href="http://mono-project.com/FAQ:_Licensing">Mono</a></li>
-  <li><a href="http://www.apache.org/licenses/icla.txt">Apache</a></li>
+  <li><a href="https://www.apache.org/licenses/icla.txt">Apache</a></li>
 </ul>
 
 <h2>Conclusion</h2>
