--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -12,7 +12,7 @@
 
 <p>That’s the basic idea, but you must read through the entire Privacy Policy below and agree with all the details before you may use any of our services. This Privacy Policy is effective immediately, meaning that every time you visit our Site or use the Services on our Site, you are accepting the practices described in this Privacy Policy.</p>
 
-<p>We use Google Universal Analytics for web analytics, which collects anonymous information about visitors.  To opt out of this and many other tracking scripts like it, we suggest tools like <a href="http://www.ghostery.com/">Ghostery</a> and <a href="https://adblockplus.org/">Adblock Plus</a>.</p>
+<p>We use Google Universal Analytics for web analytics, which collects anonymous information about visitors.  To opt out of this and many other tracking scripts like it, we suggest tools like <a href="https://www.ghostery.com/">Ghostery</a> and <a href="https://adblockplus.org/">Adblock Plus</a>.</p>
 
 <p>This Privacy Policy may change over time. Such modifications will become effective immediately upon their posting to this page. It is your obligation to review this Privacy Policy on a regular basis to inform yourself of any changes that may have been made. Your continued use of any of our Services denotes your acceptance of any such modified terms.</p>
 
@@ -20,7 +20,7 @@
 
 <h3 id="reuse">Reuse</h3>
 
-<p>This document is based upon the <a href="http://blog.railsrumble.com/privacy/">Rails Rumble Privacy Policy</a> which itself is based upon the <a href="http://automattic.com/privacy/">Automattic Privacy Policy</a> and is licensed under <a href="http://creativecommons.org/licenses/by-sa/2.5/">Creative Commons Attribution Share-Alike License 2.5</a>. Basically, this means that you can use it verbatim or edited, but you must release new versions under the same license and you have to credit the original authors within the edited version (like in parentheses, perhaps!). Neither Rails Rumble nor Automattic are connected with CLAHub in any way, nor do they sponsor or endorse CLAHub or its use of the work.</p>
+<p>This document is based upon the <a href="http://blog.railsrumble.com/privacy/">Rails Rumble Privacy Policy</a> which itself is based upon the <a href="https://automattic.com/privacy/">Automattic Privacy Policy</a> and is licensed under <a href="https://creativecommons.org/licenses/by-sa/2.5/">Creative Commons Attribution Share-Alike License 2.5</a>. Basically, this means that you can use it verbatim or edited, but you must release new versions under the same license and you have to credit the original authors within the edited version (like in parentheses, perhaps!). Neither Rails Rumble nor Automattic are connected with CLAHub in any way, nor do they sponsor or endorse CLAHub or its use of the work.</p>
 
 <p>CLAHub operates the clahub.com website and makes available to users certain services, including our Sites (clahub.com), our blog, our API, and any other software, sites, and services offered by CLAHub in connection to any of those (taken together, the “Service”). It is CLAHub’s policy to respect your privacy regarding any information we may collect while operating our Sites.</p>
 
